[package]
name = "nohost"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
actix-web-static-files = "3.0"

[dependencies]
actix-web = "3"
actix-web-static-files = "3.0"
regex = "1"
lazy_static = "1"
maud = { version = "*", features = ["actix-web"] }
